--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "test:regenerate_screenshots": "mocha test/integration/screenshots-baseline/regenerate.js --timeout=15000"
   },
   "dependencies": {
+    "@material/mwc-button": "^0.1.1",
     "@polymer/app-layout": "^3.0.0-pre.18",
     "@polymer/lit-element": "^0.5.0",
     "@webcomponents/webcomponentsjs": "^2.0.0",
+    "firebase": "^5.0.2",
     "pwa-helpers": "^0.8.2"
   },
   "devDependencies": {
