--- a/package.json
+++ b/package.json
@@ -20,24 +20,28 @@
     "test:regenerate_screenshots": "mocha test/integration/screenshots-baseline/regenerate.js --timeout=15000"
   },
   "dependencies": {
-    "@polymer/app-layout": "^3.0.0-pre.19",
+    "@material/mwc-button": "^0.1.2",
+    "@material/mwc-formfield": "^0.1.2",
+    "@polymer/app-layout": "^3.0.1",
     "@polymer/lit-element": "^0.5.2",
-    "@webcomponents/webcomponentsjs": "^2.0.0",
-    "pwa-helpers": "^0.8.2"
+    "@vaadin/vaadin-form-layout": "^2.1.0",
+    "@vaadin/vaadin-text-field": "^2.1.2",
+    "@webcomponents/webcomponentsjs": "^2.1.2",
+    "pwa-helpers": "^0.8.3"
   },
   "devDependencies": {
-    "axe-core": "^3.0.0",
+    "axe-core": "^3.1.1",
     "chai": "^4.1.2",
     "del": "^3.0.0",
     "gulp": "^4.0.0",
-    "gulp-rename": "^1.2.3",
+    "gulp-rename": "^1.4.0",
     "gulp-replace": "^1.0.0",
     "mocha": "^5.1.0",
     "pixelmatch": "^4.0.2",
-    "polymer-cli": "^1.7.4",
-    "polyserve": "^0.27.0",
+    "polymer-cli": "^1.8.0",
+    "polyserve": "^0.27.12",
     "prpl-server": "^1.1.0",
-    "puppeteer": "^1.4.0",
+    "puppeteer": "^1.8.0",
     "wct-browser-legacy": "^1.0.1"
   }
 }
