--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@material/mwc-button": "^0.1.2",
+    "@material/mwc-checkbox": "^0.2.0",
     "@material/mwc-fab": "^0.2.0",
     "@material/mwc-formfield": "^0.1.2",
     "@material/mwc-icon": "^0.2.0",
